fix: width and hight not saving
